SFDCProject/src/objects/Holiday__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Date will be excluded from SLA calculations if checked.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Day_of_Week__c</fullName>
        <formula>CASE(
  MOD(  Holiday_Date__c  - DATE( 1900, 1, 7 ), 7 ),
  0, &quot;Sunday&quot;,
  1, &quot;Monday&quot;,
  2, &quot;Tuesday&quot;,
  3, &quot;Wednesday&quot;,
  4, &quot;Thursday&quot;,
  5, &quot;Friday&quot;, 
  &quot;Saturday&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holiday_Date__c</fullName>
        <label>Holiday Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Holiday</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Holiday_Date__c</columns>
        <columns>Day_of_Week__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Company_Holidays</fullName>
        <columns>NAME</columns>
        <columns>Holiday_Date__c</columns>
        <columns>Day_of_Week__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Day_of_Week__c</field>
            <operation>notEqual</operation>
            <value>Saturday</value>
        </filters>
        <filters>
            <field>Day_of_Week__c</field>
            <operation>notEqual</operation>
            <value>Sunday</value>
        </filters>
        <label>Company Holidays</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>